test/core/errors/default_values_error/zs/array_initializer_error.zs
package array_initializer_error;

struct ArrayInitializer
{
    int8    array[5] = 1;
};
